# llm-eng-template

./: .actrc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  cookiecutter.json  pyproject.toml  pyrightconfig.json  requirements.txt  run_uv.sh
.cookiecutter_replay/: llm-eng-template.json
.gemini/: settings.json
.github/actions/setup-uv/: action.yml
.github/workflows/: meta-linters.yml  old-unit-tests.aaa  python-lint-test.yml  semgrep.yml  semgrep_local.yml  test-pyright-local.yml  trivy_pip-audit.yml
.pvenv/: pyvenv.cfg
docker/: app.Dockerfile  docker-compose.yml
docs/: AI_instructions.md  CODEX_RULES.md
scripts/git-hooks/: pre-commit  pre-push
tests/: conftest.py
{{ cookiecutter.project_slug }}/: .cursorignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  app.Dockerfile  docker-compose.yml  gemini.md  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/.gemini/: settings.json
{{ cookiecutter.project_slug }}/docs/: AI_instructions.md
{{ cookiecutter.project_slug }}/scripts/: common.sh
